--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@
             color: #fff;
             text-decoration: none;
             padding: 0.5rem 1rem;
-            transition: background 0.3s ease, color 0.3s ease;
+            transition: transform 0.3s ease, color 0.3s ease;
             border-radius: 20px;
             font-weight: 500;
         }
@@ -67,7 +67,7 @@
             background-color: rgba(255, 255, 255, 0.2);
         }
         header{
-            background: url('construction.jpg') center/cover no-repeat;
+            background: url('newbackground.jpg') center/cover no-repeat;
         }
         
         /* Hero Section */
@@ -265,8 +265,8 @@
         }
         
         .auth-button:hover {
-            background-color: #2e4899;
-            transform: translateY(-3px);
+            background-color: #000000;
+            transform: translateY(-5px);
         }
         
         .login-button {
@@ -275,7 +275,7 @@
         }
         
         .login-button:hover {
-            background-color: #0284c7;
+            background-color: #03080a;
         }
         
         nav {
